--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,11 @@
 <footer class="footer pure-g">
+  <script src="https://utteranc.es/client.js"
+        repo="MoStories"
+        issue-term="pathname"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+</script>
   <div class="pure-u-1 pure-u-md-1-2">
     <small>
       &copy;&nbsp;
