--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -66,3 +66,9 @@ layout: default
     {% include disqus.html %}
   {% endif %}
 </article>
+
+...
+<script src="/js/jquery.min.js"></script>
+{% include comments.html element=".post-content" github_account="MohammadKhan-3/MoStories" require_cookie_consent="true" %}
+</body>
+</html>
