working on comment section

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -67,8 +67,7 @@ layout: default
   {% endif %}
 </article>
 
-...
-<script src="/js/jquery.min.js"></script>
+<!-- <script src="/js/jquery.min.js"></script>
 {% include comments.html element=".post-content" github_account="MohammadKhan-3/MoStories" require_cookie_consent="true" %}
 </body>
-</html>
+</html> -->
