second attempt at staticman

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,63 +1,56 @@
-<script>
-const GH_API_URL = 'https://api.github.com/repos/aristath/aristath.github.com/issues/5/comments?client_id=890cc323bbd7d2b8189b&client_secret=59855401654fab8bbf7f5e5925facd948035b7fd?per_page=100';
-
-let request = new XMLHttpRequest();
-request.open( 'GET', GH_API_URL, true );
-request.onload = function() {
-	if ( this.status >= 200 && this.status < 400 ) {
-		let response = JSON.parse( this.response );
-
-		for ( var i = 0; i < response.length; i++ ) {
-			document.getElementById( 'gh-comments-list' ).appendChild( createCommentEl( response[ i ] ) );
-		}
-
-		if ( 0 === response.length ) {
-			document.getElementById( 'no-comments-found' ).style.display = 'block';
-		}
-	} else {
-		console.error( this );
-	}
-};
-
-function createCommentEl( response ) {
-	let user = document.createElement( 'a' );
-	user.setAttribute( 'href', response.user.url.replace( 'api.github.com/users', 'github.com' ) );
-	user.classList.add( 'user' );
-
-	let userAvatar = document.createElement( 'img' );
-	userAvatar.classList.add( 'avatar' );
-	userAvatar.setAttribute( 'src', response.user.avatar_url );
-
-	user.appendChild( userAvatar );
-
-	let commentLink = document.createElement( 'a' );
-	commentLink.setAttribute( 'href', response.html_url );
-	commentLink.classList.add( 'comment-url' );
-	commentLink.innerHTML = '#' + response.id + ' - ' + response.created_at;
-
-	let commentContents = document.createElement( 'div' );
-	commentContents.classList.add( 'comment-content' );
-	commentContents.innerHTML = response.body;
-
-	let comment = document.createElement( 'li' );
-	comment.setAttribute( 'data-created', response.created_at );
-	comment.setAttribute( 'data-author-avatar', response.user.avatar_url );
-	comment.setAttribute( 'data-user-url', response.user.url );
-
-	comment.appendChild( user );
-	comment.appendChild( commentContents );
-	comment.appendChild( commentLink );
-
-	return comment;
-}
-request.send();
-</script>
-
+<p>
 <hr>
+<p>
 
-<div class="github-comments">
-	<h2>Comments</h2>
-	<ul id="gh-comments-list"></ul>
-	<p id="no-comments-found">No comments found for this article. Comments posted before 2019-09-15 are no longer available due to a system migration since I no longer use Disqus for comments.</p>
-	<p id="leave-a-comment">Join the discussion for this article on <a href="https://github.com/aristath/aristath.github.com/issues/5">this ticket</a>. Comments appear on this page instantly.</p>
-</div>
+<!-- Static comments -->
+<!-- Partly based on Made Mistakes' comments.html file: -->
+<!-- https://github.com/mmistakes/minimal-mistakes/blob/master/_includes/comments.html -->
+<!-- Also partly based on Eduardo Boucas' reviews.html file -->
+<!-- https://github.com/eduardoboucas/popcorn/blob/gh-pages/_includes/reviews.html -->
+
+{% if site.data.comments[page.slug] %}
+
+  <h3>
+    {% if site.data.comments[page.slug].size > 1 %}
+      {{ site.data.comments[page.slug] | size }}
+    {% endif %}
+    Comments:
+  </h3>
+
+  <p>
+  <hr>
+
+  {% assign comments = site.data.comments[page.slug] | sort %}
+
+  {% for comment in comments %}
+    <br>
+    <legend><strong>{{ comment[1].name }}</strong><legend>
+    <em>{{ comment[1].date | date: "%B %d, %Y" }}</em>
+    <p>{{ comment[1].message | markdownify }}
+    <hr>
+  {% endfor %}
+  <p>
+{% endif %}
+<!-- Comment form -->
+<h3>Post a comment:</h3>
+<form method="POST" action="https://staticman-commentsystem.herokuapp.com/v3/entry/github/mohammadkhan-3/MoStories/gh-pages">
+  <input name="options[redirect]" type="hidden" value="https://mohammadkhan-3.github.io/MoStories/">
+  <input name="options[slug]" type="hidden" value="{{ page.slug }}">
+  <div>
+    <legend>Name</legend>
+    <input name="fields[name]" type="text">
+  </div>
+  <div>
+    <legend>E-mail (optional)</legend>
+    <input name="fields[email]" type="email">
+  </div>
+  <div>
+    <legend>Message (<a href="https://kramdown.gettalong.org/syntax.html">kramdown</a> markup allowed)</legend>
+    <textarea style="width:100%" name="fields[message]" rows="12"></textarea>
+  </div>
+  
+  <div>
+    <legend><em>Comments will appear after moderation.</em></legend>
+    <button type="submit">Submit Comment</button>
+  </div>
+</form>
