--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -74,16 +74,7 @@ layout: default
 
 
 
-<form method="POST" action="https://staticman-commentsystem.herokuapp.com/v3/entry/github/mohammadkhan-3/MoStories/gh-pages">
-  <input name="options[redirect]" type="hidden" value="https://mohammadkhan-3.github.io/MoStories/">
-  <!-- e.g. "2016-01-02-this-is-a-post" -->
-  <input name="options[slug]" type="hidden" value="{{ page.slug }}">
-  <label><input name="fields[name]" type="text">Name</label>
-  <label><input name="fields[email]" type="email">E-mail</label>
-  <label><textarea name="fields[message]"></textarea>Message</label>
-  
-  <button type="submit">Go!</button>
-</form>
+{% include comments.html %}
 
 
 <!-- <applause-button color = "#2B2928" class style= "width: 58px; height: 58px;"/>
