tried new heroku app for staticman

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -33,7 +33,7 @@
 {% endif %}
 <!-- Comment form -->
 <h3>Post a comment:</h3>
-<form method="POST" action="https://staticman-commentsystem.herokuapp.com/v3/entry/github/mohammadkhan-3/MoStories/gh-pages">
+<form method="POST" action="https://mostories-staticman.herokuapp.com/v3/entry/github/mohammadkhan-3/MoStories/gh-pages">
   <input name="options[redirect]" type="hidden" value="https://mohammadkhan-3.github.io/MoStories/">
   <input name="options[slug]" type="hidden" value="{{ page.slug }}">
   <div>
