--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -74,12 +74,5 @@ layout: default
 
 
 
-{% include comments.html %}
-
-
-<!-- <applause-button color = "#2B2928" class style= "width: 58px; height: 58px;"/>
+<!-- {% include comments.html %}
  -->
-<!-- <script src="/js/jquery.min.js"></script>
-{% include comments.html element=".post-content" github_account="MohammadKhan-3/MoStories" require_cookie_consent="true" %}
-</body>
-</html> -->
