--- a/_sass/hydure/_page.scss
+++ b/_sass/hydure/_page.scss
@@ -130,3 +130,15 @@ a.post-tag {
     vertical-align: middle;
   }
 }
+// applause-button
+
+applause-button {
+  width: 80px;
+  height: 80px;
+  margin: 0 auto;
+
+  .count-container {
+    color: inherit;
+  }
+}
+
