--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -73,6 +73,7 @@ layout: default
   
 
 
+<h1><applause-button color = "#2B2928" class style= "width: 58px; height: 58px;"/></h1>
 
 <!-- {% include comments.html %}
  -->
