changing background photo & applause button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -72,5 +72,15 @@ layout: default
   {% endif %}
   
 
+<head>
+  <!-- add the button style & script -->
+  <link rel="stylesheet" href="applause-button.css" />
+  <script src="applause-button.js"></script>
+</head>
+<body>
+  <!-- add the button! -->
+  <applause-button color = "#2B2928" style="width: 58px; height: 58px;"/>
+</body>  
 
-<h1><applause-button color = "#2B2928" class style= "width: 58px; height: 58px;"/></h1>
+<!-- <h1><applause-button color = "#2B2928" class style= "width: 58px; height: 58px;"/></h1>
+ -->
