--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,9 @@
 
   <body>
     <div id="layout" class="pure-g">
-      {% assign cover = site.cover | default: "https://cdn.jsdelivr.net/gh/zivong/jekyll-theme-hydure@master/cover.jpg" %}
+      <!-- {% assign cover = site.cover | default: "https://cdn.jsdelivr.net/gh/zivong/jekyll-theme-hydure@master/cover.jpg" %} -->
+      
+      {% assign cover = site.cover | default: "https://media.discordapp.net/attachments/777941150165630978/873376282182815785/IMG_3256.JPG?width=278&height=418" %}
       {% if page.cover %}
         {% assign cover = page.cover %}
       {% endif %}
