--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,13 @@
 
   <body>
     <div id="layout" class="pure-g">
-      <!-- {% assign cover = site.cover | default: "https://cdn.jsdelivr.net/gh/zivong/jekyll-theme-hydure@master/cover.jpg" %} -->
+      <!-- Original: {% assign cover = site.cover | default: "https://cdn.jsdelivr.net/gh/zivong/jekyll-theme-hydure@master/cover.jpg" %} -->
       
       {% assign cover = site.cover | default: "https://media.discordapp.net/attachments/777941150165630978/873376282182815785/IMG_3256.JPG?width=278&height=418" %}
       {% if page.cover %}
         {% assign cover = page.cover %}
       {% endif %}
-      <div class="sidebar pure-u-1 pure-u-md-1-4" {% if cover %}style="background-image: url({{ cover-1 JPG | relative_url }});"{% endif %}>
+      <div class="sidebar pure-u-1 pure-u-md-1-4" {% if cover %}style="background-image: url({{ cover | relative_url }});"{% endif %}>
         <div class="sidebar-shield">
           {% include header.html %}
         </div>
