--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -79,7 +79,7 @@ layout: default
 </head>
 <body>
   <!-- add the button! -->
-  <applause-button color = "#2B2928" style="width: 58px; height: 58px;"/>
+  <applause-button color = "#ffffff" style="width: 58px; height: 58px;"/>
 </body>  
 
 <!-- <h1><applause-button color = "#2B2928" class style= "width: 58px; height: 58px;"/></h1>
