--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
   <body>
     <div id="layout" class="pure-g">
       <!-- Original: {% assign cover = site.cover | default: "https://cdn.jsdelivr.net/gh/zivong/jekyll-theme-hydure@master/cover.jpg" %} -->
+
+      <!-- Edit default URL to change image -->
       
       {% assign cover = site.cover | default: "https://media.discordapp.net/attachments/858864456641413172/873379196154568724/IMG_3256.jpg?width=278&height=418 %}
       {% if page.cover %}
