--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
       <!-- Original: {% assign cover = site.cover | default: "https://cdn.jsdelivr.net/gh/zivong/jekyll-theme-hydure@master/cover.jpg" %} -->
             <!-- Edit default URL to change image -->
 
-      {% assign cover = site.cover | default: "https://drive.google.com/file/d/1mUr_AJjZ8iq0uaTyr7vl_qcdOBbx4YMx/view?usp=sharing %}
+      {% assign cover = site.cover | default: "https://drive.google.com/file/d/1mUr_AJjZ8iq0uaTyr7vl_qcdOBbx4YMx/view?usp=sharing" %}
       {% if page.cover %}
         {% assign cover = page.cover %}
       {% endif %}
