--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,11 @@
 
   <body>
     <div id="layout" class="pure-g">
-      <!-- Original: {% assign cover = site.cover | default: "https://cdn.jsdelivr.net/gh/zivong/jekyll-theme-hydure@master/cover.jpg" %} -->
+      <!-- Original: --> 
+      {% assign cover = site.cover | default: "https://cdn.jsdelivr.net/gh/zivong/jekyll-theme-hydure@master/cover.jpg" %}
             <!-- Edit default URL to change image -->
 
-      {% assign cover = site.cover | default: "https://media.discordapp.net/attachments/777941150165630978/873376282182815785/IMG_3256.JPG?width=278&height=418" %}
+      <!-- {% assign cover = site.cover | default: "https://media.discordapp.net/attachments/777941150165630978/873376282182815785/IMG_3256.JPG?width=278&height=418" %} -->
       {% if page.cover %}
         {% assign cover = page.cover %}
       {% endif %}
