--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -76,5 +76,8 @@ layout: default
   <applause-button color = "#ffffff" style="width: 58px; height: 58px;"/>
 </body>  
 
+</article>
+
+
 <!-- <h1><applause-button color = "#2B2928" class style= "width: 58px; height: 58px;"/></h1>
  -->
