applause button: 1 to layouts, 1 to post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -68,7 +68,7 @@ layout: default
 
 <head>
   <!-- add the button style & script -->
-  <link rel="stylesheet" href="applause-button.css" />
+  <link rel="stylesheet" href="../assets/css/applause-button.css" />
   <script src="applause-button.js"></script>
 </head>
 <body>
