Removed star system, added comments

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -66,8 +66,8 @@ layout: default
   {% endif %}
 
   
-  {% include star-rating.html rating=2 %}
-
+<!--   {% include star-rating.html rating=2 %}
+ -->
 <!-- <head> -->
   <!-- add the button style & script -->
  <!--  <link rel="stylesheet" href="../assets/css/applause-button.css" />
