--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,4 +29,6 @@
       Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> & <a href="https://github.com/zivong/jekyll-theme-hydure" target="_blank">Hydure</a>
     </small>
   </div>
+<iframe src="https://mostories.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+  
 </footer>
