Changing background to steel gray

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
       {% assign cover = site.cover | default: "https://cdn.jsdelivr.net/gh/zivong/jekyll-theme-hydure@master/cover.jpg" %}
             <!-- Edit default URL to change image -->
 
-      <!-- {% assign cover = site.cover | default: "https://media.discordapp.net/attachments/858864456641413172/873379196154568724/IMG_3256.jpg?width=278&height=418" %} -->
+      <!-- {% assign cover = site.cover | default: "https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.123freevectors.com%2Fsolidbackgrounds%2Fsteel-grey%2F&psig=AOvVaw2glzNgurGegelzNRNoGf9m&ust=1631415882414000&source=images&cd=vfe&ved=0CAkQjRxqFwoTCMifjvX39fICFQAAAAAdAAAAABAD" %} -->
       {% if page.cover %}
         {% assign cover = page.cover %}
       {% endif %}
