--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <body>
     <div id="layout" class="pure-g">
       <!-- Original: --> 
-      {% assign cover = site.cover | default: "https://cdn.jsdelivr.net/gh/zivong/jekyll-theme-hydure@master/cover.jpg" %}
+      <!-- {% assign cover = site.cover | default: "https://cdn.jsdelivr.net/gh/zivong/jekyll-theme-hydure@master/cover.jpg" %} -->
             <!-- Edit default URL to change image -->
 
       <!-- {% assign cover = site.cover | default: "https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.123freevectors.com%2Fsolidbackgrounds%2Fsteel-grey%2F&psig=AOvVaw2glzNgurGegelzNRNoGf9m&ust=1631415882414000&source=images&cd=vfe&ved=0CAkQjRxqFwoTCMifjvX39fICFQAAAAAdAAAAABAD" %} -->
